# yomu

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  main.py  pyproject.toml  pytest.ini
data/: config.yaml.example
src/yomu/: __init__.py  utils.py
src/yomu/config/: __init__.py  config.py
src/yomu/content/: __init__.py  processor.py  schema.py
src/yomu/daemon/: __init__.py  daemon.py
src/yomu/database/: __init__.py  database.py
src/yomu/email/: __init__.py  sender.py  templates.py
src/yomu/newsletter/: __init__.py  service.py
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py  test_source_processor.py
tests/unit/: test_config.py  test_content_processor.py  test_content_schema.py  test_database.py  test_email_sender.py  test_email_templates.py  test_main.py  test_newsletter_service.py
